# fns-template-app

./: .gitignore  LICENSE  README.md  environments.json  fns-template.tgz  package.sh  pc2.json
logs/: fns.log.2025-04-29
migrations/: 0001_create_boats.up.sql  0001_create_configs.up.sql  0001_create_system_status_table.up.sql  0002_create_events_table.up.sql
tasks/: README.md  pyproject.toml
tasks/app/: __main__.py  config.py  db_connection.py  db_functions.py  db_functions_native.py  db_tables.py  environments.py  fns.py  models.py  router_functions.py
tasks/dialect/: dialect.py
views/: .npmrc  README.md  lerna.json  package-lock.json  package.json
views/fns_project/: package.json  tsconfig.json
views/fns_project/src/: api.tsx  index.tsx
views/fns_project/src/components/: home.tsx
views/system-run-log/: package.json  webpack.config.js
views/system-run-log-and-file-handling/: package.json  tsconfig.json
views/system-run-log-and-file-handling/src/: App.tsx  index.tsx
views/system-run-log-and-file-handling/src/common/: Dialog.tsx
views/system-run-log-and-file-handling/src/components/: FileHandling.tsx  SystemStatusTable.tsx
views/system-run-log-and-file-handling/src/shadow/: PortalContainerContext.ts  withShadowDOM.tsx
views/system-run-log-and-file-handling/src/styles/: lightTheme.tsx  style.scss
views/system-run-log/src/: App.tsx  index.tsx  style.scss
views/system-run-log/src/common/: Tooltip.tsx
views/system-run-log/src/components/: SystemStatusTable.tsx
views/system-run-log/src/context/: ThemeProvider.tsx
views/system-run-log/src/shadow/: withShadowDOM.tsx
views/system-run-log/src/styles/: style.scss
