[tool.poetry]
name = "FNS Template app"
version = "0.0.5"
description = "Basic Demo of FNS app"
authors = ["etoplica <etoplica@paracloud.ai>"]
packages = [
	{ include = "app", from = "./"},
]
[[tool.poetry.source]]
name = "procaaso"
url = "https://pypi.procaas.us/simple/"
priority = "supplemental"


[tool.paracloud.definitions]
app = {main = "fns.py", type = "fns_task"}

[tool.poetry.dependencies]
python = "^3.8"
simple-pid = "^1.0.1"
procaaso-uns-sdk = "^0.4.2"
cpppo = "^4.4.2"
python-statemachine = "^0.8.0"
slackclient = "^2.9.4"
requests = "^2.28.1"
PyYAML = "^6.0"
debugpy = "^1.6.6"
pyrqlite = "^2.2.3"
uvicorn = "^0.23.2"
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
