[tool.poetry]
name = "package"
version = "0.0.1"
description = "description"
authors = []
packages = [
    { include = "app", from = "./"},
]

[[tool.poetry.source]]
name = "procaaso"
url = "https://pypi.procaas.us/simple/"
priority = "supplemental"

[tool.paracloud.definitions]
app = {main = "fns.py", type = "fns_task"}

[tool.poetry.dependencies]
python = "^3.11"
debugpy = "^1.6.6"
procaaso_fns_sdk = "1.0.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.38"

[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.pytest.ini_options]
pythonpath = ["app"]
